objects/LSO_Field_Entries__c.object
<CustomObject>
    <description>R3 -  LSO Field Entries</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <description>R3 Controlling Field</description>
        <label>Controlling Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R3 Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERP_Description_Dupe__c</fullName>
        <formula>LSO_Pick_List_Value_Name__c  &amp;  PickList_Code__c  &amp;  text(Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Description Dupe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Unique__c</fullName>
        <label>ERP_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LSO_Pick_List_Value_Name__c</fullName>
        <description>R3 LSO Pick List Value Name</description>
        <label>LSO Pick List Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Unique__c</fullName>
        <label>Manual_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PickList_Code__c</fullName>
        <description>R3 PickList Code</description>
        <label>PickList Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Description_Code__c</fullName>
        <description>R4 Formula field to Concatenate Picklist code and Picklist Description</description>
        <formula>PickList_Code__c&amp;&apos; :: &apos;&amp;  PickList_Description__c</formula>
        <label>PickList Description Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Description__c</fullName>
        <description>R3 PickList Description</description>
        <label>PickList Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Code_Country__c</fullName>
        <formula>PickList_Code__c&amp;&apos; :: &apos;&amp; text(Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picklist Code Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>R3 Value</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LSO Field Entries</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LSO_Pick_List_Value_Name__c</columns>
        <columns>PickList_Code__c</columns>
        <columns>PickList_Description__c</columns>
        <columns>Controlling_Field__c</columns>
        <columns>PickList_Description_Code__c</columns>
        <columns>Value__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ERP_Data</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>LSO_Pick_List_Value_Name__c</columns>
        <columns>PickList_Description__c</columns>
        <columns>PickList_Description_Code__c</columns>
        <columns>Picklist_Code_Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PickList_Code__c</columns>
        <columns>ERP_Unique__c</columns>
        <columns>Manual_Unique__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LSO_Field_Entries__c.LSO_ERP_Picklist_Entries</value>
        </filters>
        <label>ERP Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Manual_Data</fullName>
        <columns>NAME</columns>
        <columns>Controlling_Field__c</columns>
        <columns>Country__c</columns>
        <columns>LSO_Pick_List_Value_Name__c</columns>
        <columns>PickList_Code__c</columns>
        <columns>Picklist_Code_Country__c</columns>
        <columns>PickList_Description__c</columns>
        <columns>PickList_Description_Code__c</columns>
        <columns>Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Manual_Unique__c</columns>
        <columns>ERP_Unique__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LSO_Field_Entries__c.LSO_Manual_Picklist_Entries</value>
        </filters>
        <label>Manual Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LSO Field Entry - {0000}</displayFormat>
        <label>LSO Field Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSO Field Entries</pluralLabel>
    <recordTypes>
        <fullName>LSO_ERP_Picklist_Entries</fullName>
        <active>true</active>
        <label>LSO ERP Picklist Entries</label>
    </recordTypes>
    <recordTypes>
        <fullName>LSO_Manual_Picklist_Entries</fullName>
        <active>true</active>
        <label>LSO Manual Picklist Entries</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>